fix text-align on mobile

--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ a {
 }
 
 body p,
-body h1 {
+body h1,
+body h2 {
   text-align: center;
 }
 
